--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-fountainhead",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "name": "Ember Fountainhead",
+  "version": "1.0.0",
+  "description": "Robust interactive documentation for your Ember application's source code",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,7 +11,7 @@
     "start": "ember server",
     "test": "ember try:each"
   },
-  "repository": "",
+  "repository": "https://github.com/healthsparq/ember-fountainhead",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -37,7 +37,6 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.1",
     "loader.js": "^4.0.1"
   },
   "keywords": [
