--- a/package.json
+++ b/package.json
@@ -29,22 +29,29 @@
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^2.1.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "^5.5.2",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-component-playground": "1.1.0",
+    "ember-component-playground": "1.1.2",
     "ember-data": "^2.8.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ivy-codemirror": "2.0.2",
     "loader.js": "^4.0.1"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^5.1.6",
+    "ember-cli-htmlbars": "^1.0.3",
+    "ember-template-compiler": "^1.9.0-alpha",
+    "highlight.js": "^9.7.0",
+    "markdown-it": "^8.0.0",
+    "yuidocjs": "^0.10.2"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
