--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "ember-fountainhead",
   "dependencies": {
     "ember": "~2.8.0",
-    "ember-cli-shims": "0.1.1"
+    "ember-cli-shims": "0.1.1",
+    "codemirror": "~5.15.0"
   }
 }
