--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-addon"
   ],
   "dependencies": {
+    "case": "^1.4.1",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
