--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ cache:
     - node_modules
 
 env:
-  - EMBER_TRY_SCENARIO=default
+  # - EMBER_TRY_SCENARIO=default
   - EMBER_TRY_SCENARIO=ember-release
-  - EMBER_TRY_SCENARIO=ember-beta
-  - EMBER_TRY_SCENARIO=ember-canary
+  # - EMBER_TRY_SCENARIO=ember-beta
+  # - EMBER_TRY_SCENARIO=ember-canary
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - env: EMBER_TRY_SCENARIO=ember-canary
-    - env: EMBER_TRY_SCENARIO=ember-beta
+  # allow_failures:
+    # - env: EMBER_TRY_SCENARIO=ember-canary
+    # - env: EMBER_TRY_SCENARIO=ember-beta
 
 before_install:
   - npm config set spin false
