--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "ember-fountainhead",
   "dependencies": {
+    "codemirror": "~5.15.0",
     "ember": "~2.8.0",
-    "ember-cli-shims": "0.1.1",
-    "codemirror": "~5.15.0"
+    "ember-cli-shims": "0.1.1"
   }
 }
