--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "highlight.js": "^9.7.0",
     "markdown-it": "^8.0.0",
+    "prismjs": "^1.5.1",
     "yuidocjs": "^0.10.2"
   },
   "ember-addon": {
