--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "node": ">= 4.0.0"
   },
   "contributors": [
-    "Evan Rowe",
-    "Dan Hedgecock"
+    "Evan Rowe <ev.rowe@gmail.com>",
+    "Dan Hedgecock <hedgecock.d@gmail.com>"
   ],
   "bin": "./lib/index.js",
   "license": "MIT",
@@ -54,6 +54,7 @@
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-component-css": "^0.2.4",
     "markdown-it": "^8.0.0",
     "prismjs": "^1.5.1",
     "yuidocjs": "^0.10.2"
