--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-component-css": "^0.2.4",
-    "ember-radical": "git://github.com/healthsparq/ember-radical.git#0.1.0",
+    "ember-radical": "git://github.com/healthsparq/ember-radical.git#v0.2.0-alpha",
     "markdown-it": "^8.0.0",
     "prismjs": "^1.5.1",
     "yuidocjs": "^0.10.2"
