--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each",
-    "test:lib": "mocha tests-lib --recursive",
-    "sass": "node-sass app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css"
+    "test:lib": "mocha --recursive lib/**/*.spec.js",
+    "sass": "node-sass app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
+    "sass:watch": "node-sass -w=app/styles app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css"
   },
   "repository": "https://github.com/healthsparq/ember-fountainhead",
   "engines": {
@@ -58,7 +59,6 @@
     "yuidoc"
   ],
   "dependencies": {
-    "case": "^1.4.1",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
