--- a/package.json
+++ b/package.json
@@ -47,11 +47,9 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "i": "^0.3.5",
     "loader.js": "^4.0.1",
     "mocha": "^3.2.0",
-    "node-sass": "^4.0.0",
-    "npm": "^4.0.5"
+    "node-sass": "^4.0.0"
   },
   "keywords": [
     "ember-addon",
