--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "yuidocjs": "^0.10.2"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config",
-    "after": "ember-radical"
+    "configPath": "tests/dummy/config"
   }
 }
