--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "docs": "node ./lib/index.js",
     "test:lib": "mocha --recursive lib/**/*.spec.js",
     "sass": "node-sass app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
-    "sass:watch": "node-sass -w=app/styles app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css"
+    "sass:watch": "node-sass -w=app/styles app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
+    "svgs": "svg-sprite --defs --defs-dest=public/svg --defs-sprite=symbol-defs.svg public/svg/*.svg"
   },
   "repository": "https://github.com/healthsparq/ember-fountainhead",
   "engines": {
@@ -50,7 +51,8 @@
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.1",
     "mocha": "^3.2.0",
-    "node-sass": "^4.0.0"
+    "node-sass": "^4.0.0",
+    "svg-sprite": "^1.3.6"
   },
   "keywords": [
     "ember-addon",
@@ -61,7 +63,7 @@
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-radical": "git://github.com/healthsparq/ember-radical.git#7bffd41445e6cac3b658be8aa10cb1a271c5731a",
+    "ember-radical": "git://github.com/healthsparq/ember-radical.git#ad2487b433cc8d3cd933903ed9227d63d45a0408",
     "markdown-it": "^8.0.0",
     "prismjs": "^1.5.1",
     "yuidocjs": "^0.10.2"
