--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:lib": "mocha --recursive lib/**/*.spec.js",
     "sass": "node-sass app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
     "sass:watch": "node-sass -w=app/styles app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
-    "svgs": "svg-sprite --defs --defs-dest=public/svg --defs-sprite=symbol-defs.svg public/svg/*.svg"
+    "svgs": "svg-sprite --defs --defs-dest=public/svg --defs-sprite=symbol-defs.svg public/svg/svgs/*.svg"
   },
   "repository": "https://github.com/healthsparq/ember-fountainhead",
   "engines": {
