--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each",
-    "docs": "node ./lib/index.js",
-    "test:lib": "mocha --recursive lib/**/*.spec.js",
+    "test:lib": "mocha --recursive lib/*.spec.js lib/**/*.spec.js",
     "sass": "node-sass app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
     "sass:watch": "node-sass -w=app/styles app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
     "svgs": "svg-sprite --defs --defs-dest=public/svg --defs-sprite=symbol-defs.svg public/svg/svgs/*.svg"
