Add gh-pages to project for deplying demo app to github :sparkles:

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepublish": "npm run sass",
     "build": "ember build",
     "start": "ember server",
+    "deploy": "gh-pages -d dist",
     "test": "ember try:each",
     "test:lib": "mocha --recursive lib/*.spec.js lib/**/*.spec.js",
     "sass": "node-sass app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css",
@@ -47,6 +48,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "gh-pages": "^0.12.0",
     "loader.js": "^4.0.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.0.0",
