--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,27 @@
 ---
 language: node_js
 node_js:
-  - "6"
+  - "4"
 
-sudo: required
+sudo: false
 
 cache:
   directories:
-    - node_modules
+    - $HOME/.npm
+    - $HOME/.cache # includes bowers cache
 
 env:
-  # - EMBER_TRY_SCENARIO=default
+  # we recommend testing LTS's and latest stable release (bonus points to beta/canary)
+  - EMBER_TRY_SCENARIO=ember-lts-2.4
+  - EMBER_TRY_SCENARIO=ember-lts-2.8
   - EMBER_TRY_SCENARIO=ember-release
-  # - EMBER_TRY_SCENARIO=ember-beta
-  # - EMBER_TRY_SCENARIO=ember-canary
+  - EMBER_TRY_SCENARIO=ember-beta
+  - EMBER_TRY_SCENARIO=ember-canary
 
 matrix:
   fast_finish: true
-  # allow_failures:
-    # - env: EMBER_TRY_SCENARIO=ember-canary
-    # - env: EMBER_TRY_SCENARIO=ember-beta
+  allow_failures:
+    - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
   - npm config set spin false
