Force using the npm registry

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ matrix:
 
 before_install:
   - npm config set spin false
+  - npm config set registry http://registry.npmjs.org/
   - npm install -g bower
   - bower --version
   - npm install phantomjs-prebuilt
