--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "test": "tests"
   },
   "scripts": {
+    "prepublish": "npm run sass",
     "build": "ember build",
     "docs:prod": "NODE_ENV=production ember docs",
     "deploy": "npm run docs:prod && ember b -environment=production && gh-pages -d dist",
     "start": "ember server",
     "svgs": "svg-sprite --defs --defs-dest=public/svg --defs-sprite=symbol-defs.svg public/svg/svgs/*.svg",
     "test": "ember try:each",
-    "test:lib": "mocha --recursive lib/*.spec.js lib/**/*.spec.js"
+    "test:lib": "mocha --recursive lib/*.spec.js lib/**/*.spec.js",
+    "sass": "node-sass app/styles/ember-fountainhead.scss vendor/ember-fountainhead.css"
   },
   "repository": "https://github.com/healthsparq/ember-fountainhead",
   "engines": {
@@ -46,6 +48,7 @@
     "gh-pages": "^0.12.0",
     "loader.js": "^4.0.10",
     "mocha": "^3.2.0",
+    "node-sass": "^4.0.0",
     "svg-sprite": "^1.3.6"
   },
   "keywords": [
