--- a/package.json
+++ b/package.json
@@ -64,10 +64,13 @@
     "svg-sprite": "^1.3.6"
   },
   "dependencies": {
+    "broccoli-funnel": "^1.1.0",
+    "broccoli-merge-trees": "^1.2.1",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-version-checker": "^1.2.0",
+    "express": "^4.14.1",
     "markdown-it": "^8.0.0",
     "prismjs": "^1.5.1",
     "yuidocjs": "^0.10.2"
