--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-version-checker": "^1.2.0",
     "express": "^4.14.1",
+    "front-matter": "^2.1.2",
     "markdown-it": "^8.0.0",
     "prismjs": "^1.5.1",
     "yuidocjs": "^0.10.2"
