--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "configPath": "tests/dummy/config"
   },
   "devDependencies": {
+    "@dhedgecock/eloquence": "^1.0.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-cli": "^2.11.1",
