--- a/package.json
+++ b/package.json
@@ -41,27 +41,24 @@
   "devDependencies": {
     "@dhedgecock/eloquence": "^1.0.1",
     "broccoli-asset-rev": "^2.4.5",
-    "ember-ajax": "^2.4.1",
-    "ember-cli": "^2.11.1",
-    "ember-cli-app-version": "^2.0.0",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "2.13.1",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-qunit": "^4.0.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^6.0.0",
-    "ember-cli-shims": "^1.0.2",
+    "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.10.0",
     "ember-disable-prototype-extensions": "^1.1.0",
-    "ember-export-application-global": "^1.0.5",
-    "ember-load-initializers": "^0.6.0",
-    "ember-resolver": "^2.0.3",
-    "ember-source": "^2.11.2",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.13.0",
     "gh-pages": "^0.12.0",
-    "loader.js": "^4.0.10",
+    "loader.js": "^4.2.3",
     "mocha": "^3.2.0",
     "node-sass": "^4.0.0",
     "svg-sprite": "^1.3.6"
@@ -69,9 +66,9 @@
   "dependencies": {
     "broccoli-funnel": "^1.1.0",
     "broccoli-merge-trees": "^1.2.1",
-    "ember-cli-babel": "^5.1.7",
+    "ember-cli-babel": "^6.0.0",
     "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.6",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
     "ember-cli-version-checker": "^1.2.0",
     "express": "^4.14.1",
     "front-matter": "^2.1.2",
